fixes minor issue with IE wrapping "Show more"

--- a/app/assets/stylesheets/moj/component/_ellipsis.scss
+++ b/app/assets/stylesheets/moj/component/_ellipsis.scss
@@ -1,6 +1,6 @@
 .ellipsis-button {
   display: block;
-  width:  10%;
+  width:  20%;
   margin-top: $gutter-half;
 }
 
